# fastapi

./: databases.py  main.py  models.py  requirement.txt  requirements.txt  requirements_sqlmodel.txt
api/: create_tb.py  main.py
api/api/v1/: api.py
api/api/v1/endpoints/: courses.py
api/core/: configs.py
api/models/: course_model.py
app/: create_tb.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: course.py
app/core/: __init__.py  configs.py
app/models/: __init__.py  course_model.py
app/schemas/: course_schema.py
app_auth/: create_tb.py  main.py  pyproject.toml  requirements.txt
app_auth/api/v1/: api.py
app_auth/api/v1/endpoints/: articles.py  users.py
app_auth/core/: __init__.py  auth.py  configs.py  deps.py  security.py
app_auth/models/: __all_models.py  article_model.py  user_model.py
app_auth/schemas/: article_schema.py  user_schema.py
basic_app/: main.py  models.py
basic_app/routes/: courses_router.py  users_router.py
fastapi-chat/: Dockerfile  docker-compose.dev.yml
fastapi-chat/app/: main.py
fastapi-chat/app/controller/: departments.py
fastapi-chat/app/core/: configs.py
fastapi-chat/app/views/: chat.py
models_relationship/: pyproject.toml
models_relationship/src/: main.py
web/: main.py  requirements.txt
web/app/: main.py  requirements.txt
web/app/templates/: _base.html
web/basic/: main.py
web/basic/templates/: _base.html  index.html  services.html
webchat/: configs.py  core.py  endpoints.py  main.py  pyproject.toml
webchat/static/css/: style.css
webchat/static/js/: main.js
webchat/templates/: base.html
webchat/templates/chat/: chat.html
websocket/: main.py  requirements.txt
websocket/contrib/: actions.py  wait.py
websocket/core/: config.py
websocket/templates/: base.html  index.html
websocket/views/: index_view.py
(+17 files in other folders)
