[tool.poetry]
name = "app-auth"
version = "0.1.0"
description = ""
authors = ["Uadson Feitosa <uadsonpy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.89.1"
uvicorn = "0.20.0"
sqlalchemy = "1.4.41"
asyncpg = "0.27.0"
psycopg2-binary = "2.9.5"
anyio = "3.6.2"
cffi = "1.15.1"
click = "8.1.3"
colorama = "0.4.6"
cryptography = "40.0.1"
dnspython = "2.3.0"
ecdsa = "0.18.0"
email-validator = "1.3.1"
greenlet = "2.0.2"
gunicorn = "20.1.0"
h11 = "0.14.0"
idna = "3.4"
passlib = "1.7.4"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydantic = "1.10.4"
python-jose = "3.3.0"
python-multipart = "0.0.6"
pytz = "2023.3"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy2-stubs = "0.0.2a32"
sqlmodel = "0.0.8"
starlette = "0.22.0"
typing-extensions = "4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
