[tool.poetry]
name = "webchat"
version = "0.1.0"
description = ""
authors = ["Uadson Feitosa <uadsonpy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
websockets = "^12.0"
jinja2 = "^3.1.3"
python-decouple = "^3.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
